front-end started

--- a/templates/authentication.html
+++ b/templates/authentication.html
@@ -40,12 +40,12 @@ Sidebar
 <ul class="sideMenu">
 
 <li
+class="active"
+
 ><a href="Authentication">Authentication</a>
 </li>
 
 <li
-class="active"
-
 ><a href="Documentation">Documentation</a>
 </li>
 
@@ -70,19 +70,15 @@ Content
 <div id="content" class="container-fluid">
 <div class="row-fluid">
 <div class="span12">
-<section id="Documentation">
-<h1>Documentation</h1>
+<section id="Authentication">
+<h1>Authentication</h1>
 <hr>
 
-<p class="lead">Documentation for the set of Data API's provided by,
-                and maintained by the Application Development Initative at
-                Columbia University.  Visit the different endpoints, get your
-                api token, and start coding. There is some exciting stuff
-                around there! If you have any setbacks, feel free to ping
-                infrastructure@adicu.com and we'll get back to you as quick as we can.
-                Please keep in mind this is API version 0.1 and is pretty
-                rough and the edges. Report bugs, and help us make it better
-                at github.com/adicu/data.adicu.com</p>
+<p class="lead">To use any of the API's you must have an api_token
+        and appended to your string as api_token=TOKEN. To get a
+        token, login on the upper right. We use google auth to make
+        the auth request. Once signed in, visit the token page to see
+        your token, and get coding!</p>
 
 
 </section>
