updated travis and added base template

--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,3 +1,4 @@
-<html>
-404 Page not found
-</html>
+{% extends 'base.html' %}
+{% block page_content %}
+<h1>404: Page not found</h1>
+{% endblock %}
