--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ url_for('main.home') }}">Twitter Demo</a>
+                <a class="navbar-brand" href="{{ url_for('main.home') }}">Data API</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
