finish login/register

--- a/app/templates/main/home.html
+++ b/app/templates/main/home.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
 {% block page_content %}
-Hello World
+Hello,
+
+{% if current_user.is_authenticated %}
+  Hi {{ current_user.email }}
+{% else %}
+  Stranger
+{% endif %} !
+
 {% endblock %}
