--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,12 @@
 {% endblock %}
 
 {% block content %}
+    {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+    {% endfor %}
     <div class="container">
     {% block page_content %}
 {#    Custom HTML goes here#}
