updated courses documentation

--- a/app/templates/main/courses.html
+++ b/app/templates/main/courses.html
@@ -28,29 +28,32 @@ lang=js">{
     &quot;status_code&quot;: 200,
     &quot;data&quot;: [
         {
-            &quot;DepartmentCode&quot;: &quot;COMS&quot;,
+            &quot;DepartmentCode&quot;: &quot;PHYS&quot;,
             &quot;Sections&quot;: [
                 {
-                    &quot;Course&quot;: &quot;CBMF4761&quot;,
-                    &quot;Term&quot;: &quot;20131&quot;,
-                    &quot;TypeName&quot;: &quot;LECTURE&quot;,
-                    &quot;NumEnrolled&quot;: 14,
-                    &quot;Room2&quot;: null,
-                    &quot;Room1&quot;: &quot;1127&quot;,
-                    &quot;EndTime2&quot;: &quot;None&quot;,
-                    &quot;MeetsOn2&quot;: null,
-                    &quot;CampusName&quot;: &quot;MORNINGSIDE&quot;,
-                    &quot;EndTime1&quot;: &quot;17:25:00&quot;,
-                    &quot;Building1&quot;: &quot;SEELEY W. MU&quot;,
-                    &quot;Instructor1Name&quot;: &quot;PE'ER, ITSHACK&quot;,
-                    &quot;MaxSize&quot;: 75,
-                    &quot;Building2&quot;: null,
-                    &quot;CampusCode&quot;: &quot;MORN&quot;,
-                    &quot;CallNumber&quot;: 69280,
-                    &quot;MeetsOn1&quot;: &quot;MW&quot;,
-                    &quot;SectionFull&quot;: &quot;CBMF4761W001&quot;,
-                    &quot;StartTime1&quot;: &quot;16:10:00&quot;,
-                    &quot;StartTime2&quot;: &quot;None&quot;
+                    &quot;course_id&quot;: &quot;PHYS1402W001&quot;,
+                    &quot;term&quot;: &quot;20181&quot;,
+                    &quot;call_number&quot;: &quot;60379&quot;,
+                    &quot;course_name&quot;: &quot;INTRO ELEC/MAGNETSM & OPTCS&quot;,
+                    &quot;bulletin_flags&quot;: &quot;None&quot;,
+                    &quot;division_code&quot;: &quot;IF&quot;,
+                    &quot;credit_amount&quot;: &quot;3&quot;,
+                    &quot;prefix_name&quot;: &quot;PHYSICS&quot;,
+                    &quot;prefix_long_name&quot;: &quot;PHYSICS&quot;,
+                    &quot;instructor_name&quot;: &quot;KARAGIORGI, GEORGIA S&quot;,
+                    &quot;approval&quot;: &quot;None&quot;,
+                    &quot;school_code&quot;: &quot;INTF&quot;,
+                    &quot;school_name&quot;: &quot;INTERFACULTY&quot;,
+                    &quot;campus_code&quot;: &quot;MORN&quot;,
+                    &quot;campus_name&quot;: &quot;MORNINGSIDE&quot;,
+                    &quot;type_code&quot;: &quot;LC&quot;,
+                    &quot;type_name&quot;: &quot;LECTURE&quot;,
+                    &quot;num_enrolled&quot;: &quot;151&quot;,
+                    &quot;max_size&quot;: &quot;000&quot;,
+                    &quot;min_units&quot;: &quot;000&quot;,
+                    &quot;num_fixed_units&quot;: &quot;030&quot;,
+                    &quot;class_notes&quot;: &quot;STUDENTS MUST REG FOR PHYS UN1405 REC WITH SAME INSTR&quot;,
+                    &quot;meeting_times&quot;: &quot;MW     01:10P-02:25PPUP PUPIN LABORA301&quot;
                 }
             ],
             &quot;MaxUnits&quot;: 0,
