--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,15 +15,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a class="navbar-brand" href="{{ url_for('main.home') }}">Data API</a></li>
                     <li><a href="{{ url_for('main.dining') }}">Dining</a></li>
                     <li><a href="{{ url_for('main.housing') }}">Housing</a></li>
                     <li><a href="{{ url_for('main.courses') }}">Courses</a></li>
                     <li><a href="{{ url_for('main.courses') }}">Courses</a></li>
-                <a class="navbar-brand" href="{{ url_for('main.home') }}">Data API</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('main.home') }}">Home</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_authenticated %}
