--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,6 +23,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_authenticated %}
+                    <li><a href="{{ url_for('auth.token') }}">Get Token</a></li>
                     <li><a href="{{ url_for('auth.logout') }}">Sign Out</a></li>
                     {% else %}
                     <li><a href="{{ url_for('auth.login') }}">Sign In</a></li>
