--- a/app/templates/main/housing.html
+++ b/app/templates/main/housing.html
@@ -6,7 +6,12 @@
 <section id="housing">
 <h1>Housing</h1>
 <hr>
-
+<ul>
+    <input name="searchTerm" class="form-control lead" placeholder="Search for buildings here"/>
+</ul>
+<ul>
+     <input name="submit" type="submit" value='search' />
+</ul>
 <p class="lead">Housing is broken down into two different endpoints,
                 rooms and buildings.  Rooms has a bunch of room data (gasp) as
                 well as some lottery information... Buildings has a list of
