--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,11 +14,11 @@
 
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+
+                <ul class="nav navbar-nav navbar-left">
                     <li><a class="navbar-brand" href="{{ url_for('main.home') }}">Data API</a></li>
                     <li><a href="{{ url_for('main.dining') }}">Dining</a></li>
                     <li><a href="{{ url_for('main.housing') }}">Housing</a></li>
-                    <li><a href="{{ url_for('main.courses') }}">Courses</a></li>
                     <li><a href="{{ url_for('main.courses') }}">Courses</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -42,7 +42,7 @@
     {% endfor %}
     <div class="container">
     {% block page_content %}
-{#    Custom HTML goes here#}
+
     {% endblock %}
     </div>
 {% endblock %}
