--- a/app/templates/main/dining.html
+++ b/app/templates/main/dining.html
@@ -6,6 +6,12 @@
 <section id="housing">
 <h1>Dining</h1>
 <hr>
+<ul>
+    <input name="searchTerm" class="form-control lead" placeholder="Search for ??? here"/>
+</ul>
+<ul>
+     <input name="submit" type="submit" />
+</ul>
 
 <p class="lead">Housing is broken down into two different endpoints,
                 rooms and buildings.  Rooms has a bunch of room data (gasp) as
