--- a/app/templates/main/home.html
+++ b/app/templates/main/home.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
-{% block page_content %}
-Hello,
+{% block content %}
+<div id="content" class="container-fluid">
+    <div class="row-fluid">
+        <div class="span12">
 
-{% if current_user.is_authenticated %}
-  Hi {{ current_user.email }}
-{% else %}
-  Stranger
-{% endif %} !
-
+        </div>
+    </div>
+</div>
 {% endblock %}
