--- a/app/templates/main/courses.html
+++ b/app/templates/main/courses.html
@@ -43,7 +43,7 @@ some point.</p>
 <h2>Endpoint courses</h2>
 <h3>GET Request</h3>
 <div class="box-example">
-<p class="text-info"><a href="http://data.adicu.com/courses/v2/courses?api_token=API_TOKEN&amp;department=coms&amp;pretty=true&amp;limit=1" target="_blank">http://data.adicu.com/courses/v2/courses?api_token=API_TOKEN&amp;department=coms&amp;pretty=true&amp;limit=1</a></p>
+<p class="text-info">http://data.adicu.com/api/courses/&lt;term&gt;/&lt;cid&gt;?key=API_TOKEN</p>
 </div>
 <h3>Response</h3>
 <div class="box-example">
