minor token QOL changes

--- a/app/templates/auth/token.html
+++ b/app/templates/auth/token.html
@@ -6,10 +6,10 @@
 <div class="page-header">
   <h1> Get API Key </h1>
 </div>
-<p>Your API key is below</p>
-<div class="col-md-4">
 
-    <pre><code> {{ api_key }} </code></pre>
+<div class="col-md-4">
+    <p>Your API key is below. Your key will expire in one hour.</p>
+    <pre><code>{{ api_key }}</code></pre>
 </div>
 
 {% endblock %}
