--- a/app/templates/main/home.html
+++ b/app/templates/main/home.html
@@ -3,7 +3,12 @@
 <div id="content" class="container-fluid">
     <div class="row-fluid">
         <div class="span12">
-
+            <h3>
+                    About DATA@CU:
+            </h3>
+            <p>
+                 Data@CU is a project that aims to provide an API for all Columbia-related data and become the go-to source of data exclusively for student developers at Columbia. In addition to providing an API for available data, DATA@CU aims to perform data analytics where fit and provide that as part of the API as well.
+            </p>
         </div>
     </div>
 </div>
