--- a/app/static/assets/base.css
+++ b/app/static/assets/base.css
@@ -1,12 +1,17 @@
 /*       Columbia blue          */
 .cu-blue {
-  background-color: #64b5f6;
+  background-color: #0f5f7f;
+  border-width:0;
 }
 
-.navbar-inverse .navbar-nav>li>a {
+.navbar-nav>li>a, .navbar-nav>a {
   color: #ffffff;
 }
 
-.navbar-inverse .navbar-nav>li>a:hover {
+.navbar-nav>button>span {
+  background-color: #ffffff;
+}
+
+.navbar-nav>li>a:hover {
   color: #000000;
 }
