--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,21 +2,21 @@
 {%  import "bootstrap/wtf.html" as wtf %}
 
 {% block navbar %}
- <div class="navbar navbar-inverse cu-blue" role="navigation">
+ <div class="cu-blue" role="navigation">
         <div class="container">
-            <div class="navbar_header">
+            <div class="navbar-nav">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle Navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand" href="{{ url_for('main.home') }}">Data API</a>
 
             </div>
             <div class="navbar-collapse collapse">
 
-                <ul class="nav navbar-nav navbar-left">
-                    <li><a class="navbar-brand" href="{{ url_for('main.home') }}">Data API</a></li>
+                <ul class="nav navbar-nav"> 
                     <li><a href="{{ url_for('main.dining') }}">Dining</a></li>
                     <li><a href="{{ url_for('main.housing') }}">Housing</a></li>
                     <li><a href="{{ url_for('main.courses') }}">Courses</a></li>
