search button made visible on courses page

--- a/app/templates/main/courses.html
+++ b/app/templates/main/courses.html
@@ -11,7 +11,7 @@
         <input class="form-control lead" name="searchTerm" placeholder="Search for courses with names, term, call number here"/>
     </ul>
     <ul>
-        <input class="hidden" name="submit" type="submit" value='search' />
+        <input name="submit" type="submit" value='search' />
     </ul>
 </form>
 {% if results != [] %}
