paramter text files reading into tables

--- a/app/templates/main/courses.html
+++ b/app/templates/main/courses.html
@@ -97,19 +97,28 @@ lang=js">{
 
 {% if parameters != [] %}
 <table class="table table-bordered">
-    {% for item in parameters %}
-    <tr width="100%">
-            <td >
-                {{ item["name"] }}
-            </td>
-            <td >
-                {{ item["par_type"] }}
-            </td>
-            <td >
-                {{ item["description"] }}
-            </td>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Type</th>
+            <th>Description</th>
         </tr>
-    {% endfor %}
+    </thead>
+    <tbody>
+        {% for item in parameters %}
+            <tr width="100%">
+                <td >
+                    {{ item["name"] }}
+                </td>
+                <td >
+                    {{ item["type"] }}
+                </td>
+                <td >
+                    {{ item["description"] }}
+                </td>
+            </tr>
+        {% endfor %}
+    </tbody>
 </table>
 {% endif %}
 
