ChangePasswordForm and confirm added

--- a/app/templates/auth/email/confirm.html
+++ b/app/templates/auth/email/confirm.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
 Dear {{user.username}}
 
 Welcome to Data@CU!
@@ -12,3 +19,5 @@ Sincerely,
 The Data@CU Team
 
 Note: You can not reply to this email.
+</body>
+</html>
