--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -11,5 +11,5 @@
 <div class="col-md-4">
   {{ wtf.quick_form(form) }}
 </div>
-
+<a href="{{ url_for('auth.forgot_password') }}">Forgot your password? </a>
 {% endblock %}
