courses queries updated

--- a/app/templates/main/courses.html
+++ b/app/templates/main/courses.html
@@ -42,7 +42,7 @@
         <div class="panel-heading"><h4>Select</h4></div>
         <div class="panel-body">
             <button type="button" disabled class="btn">GET</button>
-            <span class="panel-text">/select?course_id=bhjgjhghjå</span>
+            <span class="panel-text">/api/courses/select?course_id=course_id&term=term&key=key</span>
         </div>
     </div>
     <div id="demo" class="collapse">
@@ -103,7 +103,7 @@
         <div class="panel-heading"><h4>Search</h4></div>
         <div class="panel-body">
             <button type="button" disabled class="btn method-btn">GET</button>
-            <span class="panel-text">/select?course_id=pifehree></span>
+            <span class="panel-text">/api/courses/search?course_name=course_name&key=key</span>
         </div>
     </div>
     <div id="demo2" class="collapse">
