User registration, login, confirmation and Password reset works

--- a/app/templates/auth/forgot_password.html
+++ b/app/templates/auth/forgot_password.html
@@ -1,13 +1,24 @@
-{% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
+<!DOCTYPE html> <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<h2>Password Reset Link</h2><br><br>
 
-{% block title %}Login {% endblock %}
 
-{% block page_content %}
-    <div class="page-header">
-        <h1> Change Your Password </h1>
-    </div>
-    <div class="col-md-4">
-        {{ wtf.quick_form(form) }}
-    </div>
-{% endblock %}
+To reset your password, please click on the following link
+
+{{url_for('auth.reset_password', token=token, _external=True)}}
+<br><br>
+
+Sincerely,<br>
+
+The Data@CU Team <br>
+
+Note:  Please do not reply to this email.
+
+
+</body>
+</html>
+
