--- a/app/templates/auth/email/confirm.html
+++ b/app/templates/auth/email/confirm.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html> <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -12,6 +11,7 @@ To confirm your account please click on the following link.
 
 
 {{url_for('auth.confirm', token=token, _external=True)}}
+<br><br>
 
 Sincerely,<br>
 
