placeholder students page

--- a/app/templates/main/students.html
+++ b/app/templates/main/students.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block page %}
+<!-- {% block page %}
   <div id="content" class="container-fluid">
     <div class="row-fluid">
       <div class="span12">
@@ -11,4 +11,12 @@
       </div>
     </div>
   </div>
+{% endblock %} -->
+{% block content %}
+  <h1>Coming soon</h1>
 {% endblock %}
+<!-- {% block styles %}
+{{super()}}
+<link rel="stylesheet"
+      href="{{url_for('static', filename='assets/api_page.css')}}">
+{% endblock %} -->
