text overflow fixed for queries

--- a/app/templates/main/courses.html
+++ b/app/templates/main/courses.html
@@ -41,7 +41,7 @@
         <div class="panel panel-default endpoint-select" >
             <div class="panel-heading" data-toggle="collapse" data-target="#select_panel"><h4>Select</h4></div>
             <div class="panel-body">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row">
                         <span class="label label-primary col-1">GET</span>
                         <span class="panel-text col-11" id="selectRequest">/api/courses/select?course_id=course_id&term=term&key=key</span>
@@ -121,7 +121,7 @@
         <div class="panel panel-default endpoint-search" >
             <div class="panel-heading" data-toggle="collapse" data-target="#search_panel"><h4>Search</h4></div>
             <div class="panel-body">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row">
                         <span class="label label-primary col-1">GET</span>
                         <span class="panel-text col-11" id="searchRequest">/api/courses/search?course_name=course_name&key=key</span>
